c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/invalid_struct_declaration/invalid_array_member.c
struct incomplete;

struct s {
  // member type is invalid: illegal to specify array of incomplete type,
  // even as a pointer's referenced type
  struct incomplete (*array_pointer)[3];
};